--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,18 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "It should be fun"
+author: "Jacob Sevlie"
+description: "Info, tips, learnings and musings from a software engineer" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "jacob.sevlie@proton.me"
+# twitter_username: "twitteruser"
+github_username: "maglfmn"
+linkedin_username: "jacob.sevlie"
 #facebook_username: username
 #flickr_username: username
-#instagram_username: username
+instagram_username: "maglfmn"
 #pinterest_username: username
 #youtube_username: username
-#googleplus_username: +username
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
@@ -25,7 +24,7 @@ rss: rss
 kramdown:
   syntax_highlighter_opts:
     disable: true
-    
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
