Fix instagram name

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username: "maglfmn"
 linkedin_username: "jacob.sevlie"
 #facebook_username: username
 #flickr_username: username
-instagram_username: "maglfmn"
+instagram_username: "jacob.sevlie"
 #pinterest_username: username
 #youtube_username: username
 
